--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -11,6 +11,12 @@ tag: 1.16.0
 nameOverride: ""
 fullnameOverride: ""
 
+# Security Context for deployments
+securityContext:
+  runAsUser: 1000
+  runAsGroup: 3000
+  fsGroup: 2000
+
 storage:
   # allowed values (cassandra, elasticsearch)
   type: cassandra
