Add security context to charts in jaeger
Signed-off-by: Ankit Mehta <ankit.mehta@appian.com>

--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -11,6 +11,12 @@ tag: 1.16.0
 nameOverride: ""
 fullnameOverride: ""
 
+# pod level security context
+podSecurityContext: {}
+
+# Container level security context
+securityContext: {}
+
 storage:
   # allowed values (cassandra, elasticsearch)
   type: cassandra
