--- a/charts/jaeger/requirements.yaml
+++ b/charts/jaeger/requirements.yaml
@@ -8,6 +8,6 @@ dependencies:
     repository: https://helm.elastic.co
     condition: provisionDataStore.elasticsearch
   - name: kafka
-    version: ^0.20.6
+    version: 0.20.6
     repository: https://kubernetes-charts-incubator.storage.googleapis.com/
     condition: provisionDataStore.kafka
