--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -90,11 +90,8 @@ cassandra:
 
 # Begin: Override values on the Kafka subchart to customize for Jaeger
 kafka:
-  replicas: 1
-  configurationOverrides:
-    "auto.create.topics.enable": true
-  zookeeper:
-    replicaCount: 1
+  autoCreateTopicsEnable: true
+
 # End: Override values on the Kafka subchart to customize for Jaeger
 
 # Begin: Default values for the various components of Jaeger
